# pgn-split

./: .gitignore  LICENSE  README.md  gotham.pgn  lichess.pgn  lichess2.pgn  open-sicilian.pgn  pgn-split.py  pyproject.toml  sample.pgn
pgns/: game0.pgn  game1.pgn  game10.pgn  game101.pgn  game102.pgn  game104.pgn  game107.pgn  game109.pgn  game11.pgn  game111.pgn  game113.pgn  game114.pgn  game116.pgn  game119.pgn  game12.pgn  game120.pgn  game122.pgn  game125.pgn  game126.pgn  game128.pgn  game13.pgn  game131.pgn  game132.pgn  game134.pgn  game137.pgn  game138.pgn  game14.pgn  game141.pgn  game143.pgn  game144.pgn  game147.pgn  game149.pgn  game15.pgn  game151.pgn  game152.pgn  game155.pgn  game157.pgn  game159.pgn  game16.pgn  game161.pgn  (+75 more)
src/pgnsplit/: main.py  pgn_splitter.py
tests/: test_pgnsplit.py
