[tool.poetry]
name = "pgnsplit"
version = "0.1.0"
description = ""
authors = ["vsingh18567 <59497793+vsingh18567@users.noreply.github.com>"]

[tool.poetry.scripts]
pgnsplit = "pgnsplit.main:main"

[tool.poetry.dependencies]
python = "^3.8"
chess = "^1.6.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
